[IntersectionObserver] Get rid of spurious console warning.

This previously may have been useful console warning to alert
developers when they called observe() on a target without adding it to
the DOM tree.  However, now that observe() always results in an
initial notification, this console warning becomes more noisy than
useful.

BUG=693166
R=mlamouri@chromium.org,ojan@chromium.org

Review-Url: https://codereview.chromium.org/2708243002
Cr-Commit-Position: refs/heads/master@{#452109}

Former-commit-id: 6ba8baa98a274d2bb9aef1d95bdb237255f09ba8